# ChangeLog for media-gfx/sphinxcontrib-mscgen
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> sphinxcontrib-mscgen-0.4.ebuild:
  Switched to python-distutils-ng eclass.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> sphinxcontrib-mscgen-0.4.ebuild:
  Switched to EAPI4.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  02 Mar 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-mscgen-0.4.ebuild:
  Use PN in PYTHON_MODNAME [cosmetic].

  29 Jan 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-mscgen-0.4.ebuild:
  Keyworded ~x86.

*sphinxcontrib-mscgen-0.4 (29 Jan 2011)

  29 Jan 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-mscgen-0.4.ebuild, +metadata.xml, +watch:
  Initial ebuild, by me [267].
